fix faction image too large

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -1198,6 +1198,11 @@ body {
 #selectedopclass{
     
 }
+.faction{
+    object-fit: contain;
+    width: 180px;
+    height: 180px;
+}
 .faction-img{
     object-fit: contain;
     width: 35px;
